main/default/objects/pharos__Pharos_Settings__c/fields/pharos__Error_Email_Report_Batch_Cron_Exp__c.field-meta.xml
<CustomField>
    <fullName>pharos__Error_Email_Report_Batch_Cron_Exp__c</fullName>
    <label>Error Email Report Batch Cron Exp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>