main/default/objects/pharos__Pharos_Settings__c/fields/pharos__Jira_Scheduler_Cron_Exp__c.field-meta.xml
<CustomField>
    <fullName>pharos__Jira_Scheduler_Cron_Exp__c</fullName>
    <label>Jira Scheduler Cron Exp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>