main/default/objects/pharos__Pharos_Settings__c/fields/pharos__Log_Service_Scheduler_Cron_Exp__c.field-meta.xml
<CustomField>
    <fullName>pharos__Log_Service_Scheduler_Cron_Exp__c</fullName>
    <label>Log Service Scheduler Cron Exp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>